Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-4111

Backend death tests should not produce minidumps

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • Impala 2.8.0
    • Impala 2.8.0
    • Backend

    Description

      The backend unit tests that use ASSERT_DEBUG_DEATH (currently just promise-test, but I am adding some more in another patch) will produce minidumps every time the test runs. We should not do that and have test utilities to disable core dumps and mini dumps.

      Attachments

        Activity

          People

            tarmstrong Tim Armstrong
            tarmstrong Tim Armstrong
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: